[gd_scene load_steps=7 format=3 uid="uid://dv4g732v2seay"]

[ext_resource type="FontFile" uid="uid://b7vkyxnsa7dol" path="res://assets/fonts/Sunset Friday.otf" id="1_4cxms"]
[ext_resource type="Script" uid="uid://cy5jqx2lgyb2" path="res://scenes/song_popup/song_popup.gd" id="1_arx2h"]

[sub_resource type="Gradient" id="Gradient_arx2h"]
colors = PackedColorArray(0.34901962, 0.24313726, 0.14901961, 1, 0.34901962, 0.24313726, 0.14901961, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ra14o"]
gradient = SubResource("Gradient_arx2h")

[sub_resource type="LabelSettings" id="LabelSettings_8db1f"]
font = ExtResource("1_4cxms")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_cf5vo"]
font = ExtResource("1_4cxms")
font_size = 20

[node name="SongPopup" type="Node2D"]
script = ExtResource("1_arx2h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 609.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("GradientTexture1D_ra14o")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="SongLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Theme of Song"
label_settings = SubResource("LabelSettings_8db1f")

[node name="ComposerLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Composer: Ategon"
label_settings = SubResource("LabelSettings_cf5vo")
